--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -41,7 +41,9 @@ h1 button {
 }
 
 .btnGhost {
-  border: 0;
+  border: 0.1px solid rgb(168, 16, 16);
+  font-size: 18px;
+  padding: 5px 10px;
   background-color: transparent;
 }
 
@@ -67,7 +69,7 @@ h1 button {
   left: 0;
   height: 100%;
   width: 100%;
-  transform: translateX(50%) rotateY(-10deg);
+  transform: translateX(0%) rotateY(-15deg);
   transition: transform 0.4s ease, opacity 0.4s ease;
 }
 
@@ -80,6 +82,10 @@ h1 button {
 
 .card.left {
   transform: translateX(-50%) rotateY(10deg);
+}
+
+.card.right {
+  transform: translateX(150%) rotateY(10deg);
 }
 
 .innerCard {
